# pyHomie

./: .gitignore  LICENSE.rst  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
doc/: conf.py  index.rst  modules.rst
example/: config.yaml  switch.py  switch.yaml  switch01.yaml  switchold.py  vzug.py  vzug.yaml
pyHomie/: __init__.py  device.py  homieSchema.py  mqttClient.py  node.py  properties.py  pyHomie.py  watchdog.py
src/pyHomie/: __init__.py  device.py  node.py  properties.py  pyHomie.py  watchdog.py
tests/: test-homie.py  test_config.py
tests/fixtures/: switchTest.yaml
