[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyHomie_ms412"
version = "0.0.1"
authors = [
  { name="Markus Schiesser", email="M.Schiesser@gmail.com" },
]
description = "pyHomie"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ms412/pyHomie"
Issues = "https://github.com/ms412/pyHomie/issues"