[metadata]
author = Markus Schiesser
author-email = M.Schiesser@gmail.com
maintainer = Markus Schiesser
maintainer-email = M.Schiesser@gmail.com
summary = A Python library for Homie Convention
description-file = README.md
home-page = https://github.com/ms412/pyHomie
license = Beerware
classifier =
    Development Status :: 3 - Alpha
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: Freeware
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Home Automation

keywords =
    mqtt
    paho-mqtt
    homie

[file]
packages =
    pyhomie